--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -2,33 +2,52 @@
 <html>
 
 <head>
-    <title>Crowd Sourcing Platform</title>
+    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
+        type="text/css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container">
-        <div class="d-flex j-center">
-            <div class="col-6 card mt-1">
-                <div class="d-flex j-center  mt-1">
-                    <h1>Terms & Conditions</h1>
-                </div>
-            
-                <div class="d-flex j-center mt-1">
-                    <ul>
-                        <li>To participate in provide a valid mail address</li>
-                        <li>All the data provided by you can be stored for future studies</li>
-                    </ul>
-                </div>
-               
+    <div class="container-fluid bg-primary">
+        <div class="row pt-5 justify-content-center">
+            <div class="col-lg-6 col-md-8 col-sm-10 p-5 text-light text-center mt-5">
+                <h1 class="display-5 font-wt-900">Terms and Conditions</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-sm-10 p-5 text-light text-center">
+                <span class="h5 p-3 badge-pill border mx-2">Terms of Use</span>
+                <span class="h5 p-3 badge-pill border mx-2">Privacy Policy</span>
+                <span class="h5 p-3 badge-pill border mx-2">Copyright & Licensing Notice</span>
             </div>
         </div>
     </div>
 
+    <div class="container-fluid p-5">
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <p class="h2">Terms of Use</p>
+            </div>
+        </div>
+        
+    </div>
+
     <%- include common/footer.ejs %>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
