--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Crowd Sourcing Platform</title>
+    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet" type="text/css">
@@ -16,39 +16,14 @@
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container my-5 p-5">
-        <div class="row justify-content-center">
-            <div class="col-sm-10 text-center">
-                <div class="jumbotron">
-                    <div class="row justify-content-center">
-                        <h1 class="display-5 font-wt-900 site-blue">Thanks for contributing:</h1>
-                    </div>
-                    <div class="row justify-content-center">
-                        <p class="h4 lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
-                            the creation of
-                            non-linear, agile and scalable solutions .</p>
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-4">
-                            <a role="button" href="/record" class="btn btn-primary shadow w-100 rounded mt-4 p-3">
-                                <span class="align-middle">
-                                    CONTRIBUTE MORE
-                                </span>
-                            </a>
-                        </div>
-                  
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-4">
-                            <a role="button" href="/" class="btn btn-outline-primary shadow w-100 rounded mt-4 p-3">
-                                <span class="align-middle">
-                                    Done for now
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                  </div>
+    <div class="container-fluid my-5 p-5">
+        <div class="row justify-content-center bg-thank-you">
+            <div class="col-6 text-center">
+                <img src="/img/thank-you.svg" class="img img-fluid">
             </div>
+        </div>
+        <div class="text-center">
+            <h1 class="display-5 font-wt-900 site-blue">Thanks for contributing</h1>
         </div>
     </div>
     <%- include common/footer.ejs %>
