--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Crowd Sourcing Platform</title>
+    <title>Va Sourcing Platform</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
